--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_activity_book">Choose your book</string>
     <string name="title_activity_practice">Practice</string>
     <string name="title_activity_transition">TransitionActivity</string>
+    <string name="title_activity_lesson_completed">LessonCompletedActivity</string>
 </resources>
