--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="correct_sentences_in_this_lesson">corrected sentences in this lesson.</string>
     <string name="exit">Exit</string>
     <string name="you_graduated_from">You graduated from</string>
+    <string name="try_again">Try again</string>
 </resources>
