--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="finish_time">Finish</string>
     <string name="correct"># correct sentences</string>
     <string name="errors_percentage">Errors</string>
+    <string name="title_activity_select_user">SelectUserActivity</string>
 </resources>
